--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
     <ul>
       {% assign navpages = site.pages | sort: 'navbarid' %}
       {%- for navpage in navpages %}
-        {%- if navpage.navbarid %}<li><a {% if navpage.url == page.url %} id="cur-nav" {% endif -%} class="page-link" href="{{ navpage.url | prepend: site.baseurl }}">{{ navpage.navbartitle | default:navpage.title }}</a></li>{% endif -%}
+        {%- if navpage.navbarid %}<li {% if navpage.url == page.url %} id="cur-nav" {% endif -%}><a class="page-link" href="{{ navpage.url | prepend: site.baseurl }}">{{ navpage.navbartitle | default:navpage.title }}<span></span></a></li>{% endif -%}
       {% endfor -%}
     </ul>
   </nav>
