Fix missing tags for OpenGraph

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,8 @@
     <meta property="og:url"         content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}"/>
     <meta property="og:title"       content="{% if page.title %}{{ page.title }}{% else %}{{ site.webmaster_realname }} | {{ site.title }}{% endif %}"/>
     <meta property="og:description" content="{% if page.tagline %}{{ page.tagline }}{% elsif page.title %}{{ page.excerpt | remove: '<p>' | remove: '</p>' | truncatewords: 15 | strip_html }}{% else %}{{site.description}}{% endif %}"/>
-    <meta property="og:bigimage"    content="{{ page.bigimage | prepend: site.baseurl | prepend: site.url }}"/>
+    <meta property="og:image"       content="{{ page.bigimage | prepend: site.baseurl | prepend: site.url }}"/>
+    <meta property="og:site_name"   content="{{ site.name }}"/>
 
     <!--Twitter Cards-->
     <!--Summary Card-->
