--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
     <meta property="og:description" content="{% if page.tagline %}{{ page.tagline }}{% elsif page.title %}{{ page.excerpt | remove: '<p>' | remove: '</p>' | truncatewords: 15 | strip_html }}{% else %}{{site.description}}{% endif %}"/>
     <meta property="og:image"       content="{{ page.bigimage | prepend: site.baseurl | prepend: site.url }}"/>
     <meta property="og:site_name"   content="{{ site.name }}"/>
+    <meta property="og:type"        content="article"/>
 
     <!--Twitter Cards-->
     <!--Summary Card-->
