--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
 
 a, p, span, li, th, td
 {
-  color: rgb(194, 194, 194);
+  color:#c2c2c2;
 }
 
 html, body { height: 100%; }
@@ -46,21 +46,6 @@ a:visited { color: #205caa; }
 }
 ::-moz-selection {
   background: #462c03; /* Gecko Browsers */
-}
-
-/* Wrap */
-
-.wrap:before,
-.wrap:after { content:""; display:table; }
-.wrap:after { clear: both; }
-.wrap {
-  max-width: 700px;
-  /*padding: 0 30px;*/
-  margin-left: auto;
-  margin-right: auto;
-  zoom: 1;
-  padding-left: 2em;
-  padding-right: 2em;
 }
 
 /* Header Styles */
@@ -116,7 +101,7 @@ a:visited { color: #205caa; }
 }
 
 .site-nav .page-link:hover {
-  color: rgb(184, 184, 184);
+  color: #b8b8b8;
 }
 
 .site-nav li span
@@ -126,7 +111,7 @@ a:visited { color: #205caa; }
   left: 0;
   width: 0%;
   height: 2px;
-  background: rgb(61, 61, 61);
+  background: #3d3d3d;
   transition: all 0.3s;
 }
 
@@ -140,13 +125,16 @@ a:visited { color: #205caa; }
 
 .site-nav a
 {
-  color: #8c8c7d;
+  color: #bdbdbd;
   text-decoration: none;
 }
 
+.site-nav a:hover {
+  color: #2a7ae2;
+}
+
 .site-nav a:hover span {
-  color: rgb(184, 184, 184);
-  background: rgb(184, 184, 184);
+  background: #2a7ae2;
   width: 100%;
 }
 
@@ -158,6 +146,61 @@ a:visited { color: #205caa; }
 
 .site-nav #cur-nav span {
   width: 100%;
+}
+
+
+/* Default Page Content styles */
+/* ----------------------------------------------------------*/
+
+.page-content {
+  padding: 1em 1em;
+  background-color: #141414;
+}
+
+.page-content .wrap
+{
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.page-content > div
+{
+    margin-bottom: 3em;
+}
+
+.page-content img
+{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+
+.page-content strong
+{
+  font-weight: bold;
+}
+
+/* Wrap */
+/* ----------------------------------------------------------*/
+
+.wrap:before,
+.wrap:after { content:""; display:table; }
+.wrap:after { clear: both; }
+.wrap {
+  max-width: 700px;
+  /*padding: 0 30px;*/
+  margin-left: auto;
+  margin-right: auto;
+  zoom: 1;
+  padding-left: 2em;
+  padding-right: 2em;
+  background-color: inherit;
+}
+
+.wrap:last-child
+{
+    margin-bottom: 0em;
 }
 
 /* Footer Styles */
@@ -330,7 +373,7 @@ td
   letter-spacing: -1px;
   
   margin: 0.0em 1em;
-  color: rgb(194, 194, 194);
+  color: #c2c2c2;
 }
 
 .posts .post-excerpt
@@ -352,53 +395,79 @@ td
 
 .posts h2, h3, h4, h5
 {
-  border-bottom: 1px dashed rgb(61, 61, 61);
+  border-bottom: 1px dashed #3d3d3d;
 }
 
-/* Default Page Content styles */
-/* ----------------------------------------------------------*/
-
-.page-content {
-  padding: 1em 1em;
-  background-color: #141414;
-}
-
-.page-content .wrap
-{
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.page-content > div
-{
-    margin-bottom: 3em;
-}
-
-.wrap:last-child
-{
-    margin-bottom: 0em;
-}
-
-.page-content img
-{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  
-}
-
-.page-content strong
-{
-  font-weight: bold;
-}
 
 /* TODO: Add table styling */
 
 
-/* Layout-specific styles */
+/* Syntax highlighting styles */
 /* ----------------------------------------------------------*/
 
+.highlight  { background: #ffffff; }
+.highlight .c { color: #999988; font-style: italic } /* Comment */
+.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
+.highlight .k { font-weight: bold } /* Keyword */
+.highlight .o { font-weight: bold } /* Operator */
+.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
+.highlight .cp { color: #999999; font-weight: bold } /* Comment.Preproc */
+.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
+.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
+.highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
+.highlight .gd .x { color: #000000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
+.highlight .ge { font-style: italic } /* Generic.Emph */
+.highlight .gr { color: #aa0000 } /* Generic.Error */
+.highlight .gh { color: #999999 } /* Generic.Heading */
+.highlight .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
+.highlight .gi .x { color: #000000; background-color: #aaffaa } /* Generic.Inserted.Specific */
+.highlight .go { color: #888888 } /* Generic.Output */
+.highlight .gp { color: #555555 } /* Generic.Prompt */
+.highlight .gs { font-weight: bold } /* Generic.Strong */
+.highlight .gu { color: #aaaaaa } /* Generic.Subheading */
+.highlight .gt { color: #aa0000 } /* Generic.Traceback */
+.highlight .kc { font-weight: bold } /* Keyword.Constant */
+.highlight .kd { font-weight: bold } /* Keyword.Declaration */
+.highlight .kp { font-weight: bold } /* Keyword.Pseudo */
+.highlight .kr { font-weight: bold } /* Keyword.Reserved */
+.highlight .kt { color: #445588; font-weight: bold } /* Keyword.Type */
+.highlight .m { color: #009999 } /* Literal.Number */
+.highlight .s { color: #d14 } /* Literal.String */
+.highlight .na { color: #008080 } /* Name.Attribute */
+.highlight .nb { color: #0086B3 } /* Name.Builtin */
+.highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
+.highlight .no { color: #008080 } /* Name.Constant */
+.highlight .ni { color: #800080 } /* Name.Entity */
+.highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
+.highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
+.highlight .nn { color: #555555 } /* Name.Namespace */
+.highlight .nt { color: #000080 } /* Name.Tag */
+.highlight .nv { color: #008080 } /* Name.Variable */
+.highlight .ow { font-weight: bold } /* Operator.Word */
+.highlight .w { color: #bbbbbb } /* Text.Whitespace */
+.highlight .mf { color: #009999 } /* Literal.Number.Float */
+.highlight .mh { color: #009999 } /* Literal.Number.Hex */
+.highlight .mi { color: #009999 } /* Literal.Number.Integer */
+.highlight .mo { color: #009999 } /* Literal.Number.Oct */
+.highlight .sb { color: #d14 } /* Literal.String.Backtick */
+.highlight .sc { color: #d14 } /* Literal.String.Char */
+.highlight .sd { color: #d14 } /* Literal.String.Doc */
+.highlight .s2 { color: #d14 } /* Literal.String.Double */
+.highlight .se { color: #d14 } /* Literal.String.Escape */
+.highlight .sh { color: #d14 } /* Literal.String.Heredoc */
+.highlight .si { color: #d14 } /* Literal.String.Interpol */
+.highlight .sx { color: #d14 } /* Literal.String.Other */
+.highlight .sr { color: #009926 } /* Literal.String.Regex */
+.highlight .s1 { color: #d14 } /* Literal.String.Single */
+.highlight .ss { color: #990073 } /* Literal.String.Symbol */
+.highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #008080 } /* Name.Variable.Class */
+.highlight .vg { color: #008080 } /* Name.Variable.Global */
+.highlight .vi { color: #008080 } /* Name.Variable.Instance */
+.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+
 /* Post styles */
+/* ----------------------------------------------------------*/
 
 .post-header
 {
@@ -488,11 +557,11 @@ td
   content: ' ';
   display: block;
   padding-bottom: 0.3em;
-  border-bottom: 1px solid rgb(128, 128, 128);
+  border-bottom: 1px solid #808080;
 }
 .post-content h2, h3, h4, h5
 {
-  border-bottom: 1px dashed rgb(61, 61, 61);
+  border-bottom: 1px dashed #3d3d3d;
 }
 
 .post-content blockquote { padding-left: 10px; }
@@ -550,119 +619,13 @@ video::-internal-media-controls-download-button {
 
 .post pre.terminal code { background-color: #333; }
 
-/* Projects styles */
+/* Comments */
+/* --------------------------------------------------------- */
 
-.projects img
+.post-comments
 {
-  position: relative;
-  display: block;
-  float: left;
-  box-shadow: 0px 0.3em 0.5em #000000;
-}
-
-.projects p
-{
-  display: block;
-}
-
-.projects table
-{
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.projects th
-{
-  padding-left: 0.25em;
-  padding-right: 0.25em;
-  height: 100%;
-}
-
-.projects td
-{
-  padding-left : 0.25em;
-  padding-right : 0.25em;
-}
-
-.projects div
-{
-  display: block
-}
-
-.projects img
-{
-  margin-left: auto;
-  margin-right: auto;
-  float: none;
-  display: block;
-}
-
-.project-showcase li
-{
-  list-style-type: none;
-  margin-bottom: 0.4em;
-}
-
-.project-showcase li:last-child
-{
-  margin-bottom: unset;
-}
-
-.project-showtable td 
-{
-  text-align: left;
-  margin-left: auto;
-  margin-right: auto;
-  padding : 1em;
-  background: #121312;
-  vertical-align: top;
-}
-
-.project-showtable td:first-child
-{
-  width: 30%;
-}
-
-.project-showtable img 
-{
-  position: relative;
-  display: block;
-}
-
-.project-showtable td p
-{
-  vertical-align: top;
-  padding-left : 0.25em;
-  padding-right : 0.25em;
-}
-
-.project-linktable td
-{
-  text-align: center;
-  background: #292a29;
-}
-
-.project-showcase
-{
-  padding: 1em;
-  overflow: auto;
-}
-
-.project-showcase #thumb
-{
-  float: left;
-  width: 33%;
-}
-
-.project-showcase #desc
-{
-  float: right;
-  width: 66%;
-}
-
-.project-showcase p
-{
-  padding-left: 1em;
+  background-color: #141414;
+  padding: 1em 1em;
 }
 
 /* Pagination */
@@ -689,78 +652,7 @@ video::-internal-media-controls-download-button {
   font-style: italic;
 }
 
-/* Comments */
-/* --------------------------------------------------------- */
 
-.post-comments
-{
-  background-color: #141414;
-  padding: 1em 1em;
-}
-
-/* Syntax highlighting styles */
-/* ----------------------------------------------------------*/
-
-.highlight  { background: #ffffff; }
-.highlight .c { color: #999988; font-style: italic } /* Comment */
-.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
-.highlight .k { font-weight: bold } /* Keyword */
-.highlight .o { font-weight: bold } /* Operator */
-.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #999999; font-weight: bold } /* Comment.Preproc */
-.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
-.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
-.highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
-.highlight .gd .x { color: #000000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
-.highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #aa0000 } /* Generic.Error */
-.highlight .gh { color: #999999 } /* Generic.Heading */
-.highlight .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
-.highlight .gi .x { color: #000000; background-color: #aaffaa } /* Generic.Inserted.Specific */
-.highlight .go { color: #888888 } /* Generic.Output */
-.highlight .gp { color: #555555 } /* Generic.Prompt */
-.highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #aaaaaa } /* Generic.Subheading */
-.highlight .gt { color: #aa0000 } /* Generic.Traceback */
-.highlight .kc { font-weight: bold } /* Keyword.Constant */
-.highlight .kd { font-weight: bold } /* Keyword.Declaration */
-.highlight .kp { font-weight: bold } /* Keyword.Pseudo */
-.highlight .kr { font-weight: bold } /* Keyword.Reserved */
-.highlight .kt { color: #445588; font-weight: bold } /* Keyword.Type */
-.highlight .m { color: #009999 } /* Literal.Number */
-.highlight .s { color: #d14 } /* Literal.String */
-.highlight .na { color: #008080 } /* Name.Attribute */
-.highlight .nb { color: #0086B3 } /* Name.Builtin */
-.highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
-.highlight .no { color: #008080 } /* Name.Constant */
-.highlight .ni { color: #800080 } /* Name.Entity */
-.highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
-.highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
-.highlight .nn { color: #555555 } /* Name.Namespace */
-.highlight .nt { color: #000080 } /* Name.Tag */
-.highlight .nv { color: #008080 } /* Name.Variable */
-.highlight .ow { font-weight: bold } /* Operator.Word */
-.highlight .w { color: #bbbbbb } /* Text.Whitespace */
-.highlight .mf { color: #009999 } /* Literal.Number.Float */
-.highlight .mh { color: #009999 } /* Literal.Number.Hex */
-.highlight .mi { color: #009999 } /* Literal.Number.Integer */
-.highlight .mo { color: #009999 } /* Literal.Number.Oct */
-.highlight .sb { color: #d14 } /* Literal.String.Backtick */
-.highlight .sc { color: #d14 } /* Literal.String.Char */
-.highlight .sd { color: #d14 } /* Literal.String.Doc */
-.highlight .s2 { color: #d14 } /* Literal.String.Double */
-.highlight .se { color: #d14 } /* Literal.String.Escape */
-.highlight .sh { color: #d14 } /* Literal.String.Heredoc */
-.highlight .si { color: #d14 } /* Literal.String.Interpol */
-.highlight .sx { color: #d14 } /* Literal.String.Other */
-.highlight .sr { color: #009926 } /* Literal.String.Regex */
-.highlight .s1 { color: #d14 } /* Literal.String.Single */
-.highlight .ss { color: #990073 } /* Literal.String.Symbol */
-.highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #008080 } /* Name.Variable.Class */
-.highlight .vg { color: #008080 } /* Name.Variable.Global */
-.highlight .vi { color: #008080 } /* Name.Variable.Instance */
-.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
 
 /* Mobile-friendly considerations */
 
@@ -820,4 +712,88 @@ video::-internal-media-controls-download-button {
   {
     padding: initial;
   }
+}
+
+/* Layout-specific styles */
+/* ----------------------------------------------------------*/
+
+/* Projects */
+
+.projects img
+{
+  position: relative;
+  display: block;
+  float: left;
+  box-shadow: 0px 0.3em 0.5em #000000;
+}
+
+.projects p
+{
+  display: block;
+}
+
+.projects table
+{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.projects th
+{
+  padding-left: 0.25em;
+  padding-right: 0.25em;
+  height: 100%;
+}
+
+.projects td
+{
+  padding-left : 0.25em;
+  padding-right : 0.25em;
+}
+
+.projects div
+{
+  display: block
+}
+
+.projects img
+{
+  margin-left: auto;
+  margin-right: auto;
+  float: none;
+  display: block;
+}
+
+.project-linktable td
+{
+  text-align: center;
+  background: #292a29;
+}
+
+.project-showcase
+{
+  padding: 1em;
+  overflow: auto;
+}
+
+.project-showcase #thumb
+{
+  float: left;
+  width: 33%;
+}
+
+.project-showcase #desc
+{
+  float: right;
+  width: 66%;
+}
+
+.project-showcase p
+{
+  padding-left: 1em;
+}
+
+.project-showcase li
+{
+  list-style: none;
 }
