--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
   padding: 0;
 }
 
-a, p, span, li, th, td
+a, p, li, th, td
 {
   color:#c2c2c2;
 }
@@ -21,7 +21,7 @@ body {
   font-size: 14px;
   line-height: 1.5;
   font-weight: 300;
-  background-color: #0e0e0e;
+  background-color: #202020;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -155,6 +155,7 @@ a:visited { color: #205caa; }
 .page-content {
   padding: 1em 1em;
   background-color: #141414;
+  font-size: 1.1em;
 }
 
 .page-content .wrap
@@ -165,7 +166,7 @@ a:visited { color: #205caa; }
 
 .page-content > div
 {
-    margin-bottom: 3em;
+  margin-bottom: 3em;
 }
 
 .page-content img
@@ -173,13 +174,18 @@ a:visited { color: #205caa; }
   display: block;
   margin-left: auto;
   margin-right: auto;
-  
 }
 
 .page-content strong
 {
   font-weight: bold;
 }
+
+.page-content em
+{
+  font-style: italic;
+}
+
 
 /* Wrap */
 /* ----------------------------------------------------------*/
@@ -207,10 +213,14 @@ a:visited { color: #205caa; }
 /* ----------------------------------------------------------*/
 
 .site-footer {
-  border-top: 1px solid #050505;
-  padding: 30px 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1.5em; 
+  margin-bottom: 1.5em; 
+  text-align: center;
+  min-height: 8em;
 }
-
 .footer-heading {
   font-size: 18px;
   font-weight: 300;
@@ -218,54 +228,22 @@ a:visited { color: #205caa; }
   margin-bottom: 15px;
 }
 
-.site-footer .column
-{ float: left; margin-bottom: 15px;
-}
-
-.site-footer .column {
-  float: none;
-  clear: both;
-  width: auto;
-  margin: 0 0 15px; }
-
 .site-footer ul { list-style: none; }
 
 .site-footer li,
 .site-footer p {
   font-size: 15px;
   letter-spacing: -.3px;
-  color: #828282;
+  color: #c2c2c2;
+  display: inline-block;
 }
 
-.site-footer .wrap
+.site-footer li+li:before
 {
-  padding: 30px 30px;
+  content: "/";
 }
 
-.footer-col-1 {
-  width: 270px; /*fallback*/
-  width: -webkit-calc(35% - 10px);
-  width: -moz-calc(35% - 10px);
-  width: -o-calc(35% - 10px);
-  width: calc(35% - 10px);
-  margin-right: 10px
-}
-.footer-col-2 {
-  width: 175px; /*fallback*/
-  width: -webkit-calc(23.125% - 10px);
-  width: -moz-calc(23.125% - 10px);
-  width: -o-calc(23.125% - 10px);
-  width: calc(23.125% - 10px);
-  margin-right: 10px
-}
-.footer-col-3 {
-  width: 335px; /*fallback*/
-  width: -webkit-calc(41.875%);
-  width: -moz-calc(41.875%);
-  width: -o-calc(41.875%);
-  width: calc(41.875%);
-}
-
+.social-icon-svg,
 .github-icon-svg,
 .twitter-icon-svg {
   display: inline-block;
@@ -275,51 +253,8 @@ a:visited { color: #205caa; }
   top: 3px;
 }
 
-
 /* Home styles */
 /* ----------------------------------------------------------*/
-
-/* showcase */
-
-.showcase
-{
-    position: relative;
-    text-align: justify;
-    margin-bottom: -2em;
-
-}
-
-.showcase > div
-{
-    width: 32%;
-    display: inline-block;
-    vertical-align: middle;
-}
-.showcase img
-{
-    max-width: 100%;
-}
-
-.showcase::after
-{
-    text-align: center;
-    content: "";
-    width: 100%;
-    display:inline-block;
-}
-
-a.darken img {
-    -webkit-transition: all 0.1s linear;
-       -moz-transition: all 0.1s linear;
-        -ms-transition: all 0.1s linear;
-         -o-transition: all 0.1s linear;
-            transition: all 0.1s linear;
-}
-
-a.darken:hover img
-{
-    opacity: 0.6;
-}
 
 table
 {
@@ -354,9 +289,7 @@ td
 .posts .post-date
 {
   display: block;
-  font-size: 15px;
   color: #818181;
-  margin-bottom: 0.3em;
   float: left;
 }
 
