Add experimental style changes for headers and spacing

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,4 +12,5 @@
       {% endfor -%}
     </ul>
   </nav>
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata|Merriweather+Sans:300&display=swap" rel="stylesheet">
 </header>
