--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro&subset=latin,latin-ext);
-@import url(//fonts.googleapis.com/css?family=Inconsolata|Roboto|Space+Mono);
-
 /* Base and Defaults*/
 /* ----------------------------------------------------------*/
 
@@ -17,18 +14,23 @@ a, p, li, th, td
 html, body { height: 100%; }
 
 body {
-  font-family: 'Inconsolata', monospace;
+  font-family: 'Merriweather Sans', monospace;
   font-size: 14px;
   line-height: 1.5;
   font-weight: 300;
   background-color: #202020;
+  text-rendering: optimizeLegibility;
+}
+
+header, footer
+{
+  font-family: 'Inconsolata', monospace;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%;
   font-weight: 400;
   color: #8c8c7d;
-  font-family: 'Space Mono', sans-serif;
 }
 
 th
@@ -42,10 +44,10 @@ a:hover   { text-decoration: underline; }
 a:visited { color: #205caa; }
 
 ::selection {
-  background: #462c03; /* WebKit/Blink Browsers */
+  background: #7f1e00; /* WebKit/Blink Browsers */
 }
 ::-moz-selection {
-  background: #462c03; /* Gecko Browsers */
+  background: #7f1e00; /* Gecko Browsers */
 }
 
 /* Header Styles */
@@ -61,18 +63,13 @@ a:visited { color: #205caa; }
   margin-bottom: 1.5em; 
 }
 
-.site-logo
-{
-  margin-bottom: 1em;
-}
-
 #headerlogo {
   height:40px;
-  padding-top:10px;
   position:relative;
   display:block;
   margin-left:auto;
-  margin-right:auto
+  margin-right:auto;
+  margin-bottom: 1em;
 }
 
 /* nav */
@@ -153,7 +150,6 @@ a:visited { color: #205caa; }
 /* ----------------------------------------------------------*/
 
 .page-content {
-  padding: 1em 1em;
   background-color: #141414;
   font-size: 1.1em;
 }
@@ -162,11 +158,6 @@ a:visited { color: #205caa; }
 {
   padding-top: 30px;
   padding-bottom: 30px;
-}
-
-.page-content > div
-{
-  margin-bottom: 3em;
 }
 
 .page-content img
@@ -216,11 +207,10 @@ a:visited { color: #205caa; }
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 1.5em; 
-  margin-bottom: 1.5em; 
   text-align: center;
-  min-height: 8em;
+  padding: 1em;
 }
+
 .footer-heading {
   font-size: 18px;
   font-weight: 300;
@@ -279,6 +269,7 @@ td
 {
   font-size: 1.2em;
   list-style-type: none;
+  font-family: 'inconsolata';
 }
 
 .posts li
@@ -405,36 +396,36 @@ td
 .post-header
 {
   margin: 10px 0 10px;
-  text-align: center;
 }
 
 .post-header h1 {
   font-size: 42px;
-  letter-spacing: -1.75px;
   line-height: 1;
   font-weight: 300;
 }
 
 .post-header .meta {
-  font-size: 15px;
+  font-size: 1.5em;
   color: #818181;
-  margin-top: 5px;
 }
 
 .post-content { margin: 0 0 30px; }
 
-.post-content > * { margin: 20px 0; }
+.post-content > * { margin: 20px 0px 0 0; }
+
+.post-content h2 + p,
+.post-content h3 + p,
+.post-content h4 + p,
+.post-content h5 + p,
+.post-content h6 + p
+{
+  margin-top: 5px;
+}
 
 .post-content p
 {
   font-size: 1.1em;
-  line-height: 1.4;
-}
-
-.post-content blockquote p
-{
-  font-size: 1em;
-  margin: 20px 0;
+  line-height: 1.5;
 }
 
 .post-content h1,
@@ -443,29 +434,24 @@ td
 .post-content h4,
 .post-content h5,
 .post-content h6 {
-  line-height: 1;
   font-weight: 300;
 }
 
 .post-content h1{
   font-size: 40px;
-  letter-spacing: -1.50px;
   text-align: center;
 }
 
 .post-content h2 {
   font-size: 32px;
-  letter-spacing: -1.25px;
 }
 
 .post-content h3 {
   font-size: 26px;
-  letter-spacing: -1px;
 }
 
 .post-content h4 {
   font-size: 20px;
-  letter-spacing: -1px;
   margin: 0px;
 }
 
@@ -479,7 +465,7 @@ td
   margin: 30px 0;
 }
 
-.post-header h1 { font-size: 22px; }
+.post-header h1 { font-size: 3em; }
 .post-content h1 { text-align: unset; font-size: 20px; }
 .post-content h2 { font-size: 18px; }
 .post-content h3 { font-size: 16px; }
@@ -506,7 +492,7 @@ td
 
 .post-content img, video
 {
-  max-width: 100%;
+  max-width: 80%;
 }
 
 video::-webkit-media-controls-panel {
@@ -585,72 +571,23 @@ video::-internal-media-controls-download-button {
   font-style: italic;
 }
 
-
-
-/* Mobile-friendly considerations */
-
-@media screen and (max-width: 39.5em)
-{
-  .site-header
-  {
-    margin-top: 2em;
-    margin-bottom: 2em;
-  }
-
-  .site-nav
-  {
-    line-height: inherit;
-  }
-
-  .site-nav .page-link
-  {
-    margin: 0px;
-  }
-
-  .project-showcase img
-  {
-    float: initial;
-    max-width: 100%;
-  }
-
-  .project-showcase br
-  {
-    height: 1em;
-    width: 100%;
-  }
-
-  .project-showcase p
-  {
-    float: top;
-  }
-
-  .project-showcase #thumb
-  {
-    float: initial;
-    width: initial;
-  }
-
-  .project-showcase #desc
-  {
-    float: initial;
-    width: initial;
-  }
-
-  .project-showcase p
-  {
-    padding-left: initial;
-  }
-
-  .wrap
-  {
-    padding: initial;
-  }
-}
-
 /* Layout-specific styles */
 /* ----------------------------------------------------------*/
 
 /* Projects */
+
+.projects em,
+.projects p
+{
+  margin: 20px 0px 0 0;
+}
+.projects div p:first-of-type,
+.projects p em:first-of-type
+{
+  margin-top: 0px;
+}
+
+.projects 
 
 .projects img
 {
@@ -658,6 +595,7 @@ video::-internal-media-controls-download-button {
   display: block;
   float: left;
   box-shadow: 0px 0.3em 0.5em #000000;
+  margin-bottom: 20px;
 }
 
 .projects p
@@ -729,4 +667,72 @@ video::-internal-media-controls-download-button {
 .project-showcase li
 {
   list-style: none;
+}
+
+
+/* Mobile-friendly considerations */
+
+@media screen and (max-width: 699px)
+{
+  .site-header
+  {
+    margin-top: 2em;
+    margin-bottom: 2em;
+  }
+
+  .site-nav
+  {
+    line-height: inherit;
+  }
+
+  .site-nav .page-link
+  {
+    margin: 0px;
+  }
+
+  .project-showcase img
+  {
+    float: initial;
+    min-width: 100%;
+  }
+
+  .project-showcase br
+  {
+    height: 1em;
+    width: 100%;
+  }
+
+  .project-showcase p
+  {
+    float: top;
+  }
+
+  .project-showcase #thumb
+  {
+    float: initial;
+    width: initial;
+  }
+
+  .project-showcase #desc
+  {
+    float: initial;
+    width: initial;
+  }
+
+  .project-showcase p
+  {
+    padding-left: initial;
+  }
+
+  .wrap
+  {
+    padding: initial;
+  }
+
+  /*
+  .posts .post-date
+  {
+    display: none;
+  }
+  */
 }
