--- a/layouts/shortcodes/socials.html
+++ b/layouts/shortcodes/socials.html
@@ -1,4 +1,5 @@
 {{ if isset .Site.Params "social" }}
+  <!-- update this and the index template if using 'terrehbyte' fork of cactus -->
   <p>{{ .Get 0 | default "Send me a message via" }}
   {{ $length := (len .Site.Params.social) }}
   {{ range $index, $elem := .Site.Params.social}}
@@ -9,6 +10,11 @@
     {{ else if eq $elem.name "rss" }}
     <a class="icon" target="{{ $elem.target | default "_blank" }}" rel="noopener" href="{{ $elem.link }}" aria-label="RSS">
       <i class="fas fa-rss" aria-hidden="true"></i>
+    </a>
+    <!-- bluesky not available in FA yet - see https://github.com/FortAwesome/Font-Awesome/issues/19810 -->
+    {{ else if eq $elem.name "bsky" }}
+    <a class="icon" target="{{ $elem.target | default "_blank" }}" rel="noopener" href="{{ $elem.link }}" aria-label="RSS">
+      <i class="fas fa-square" aria-hidden="true"></i>
     </a>
     {{ else if eq $elem.name "scholar" }}
     <a class="icon" target="{{ $elem.target | default "_blank" }}" rel="noopener" href="{{ $elem.link }}" aria-label="Google Scholar">
